# crypto-anomaly-detection-bot

./: celerybeat-schedule  docker-compose.yml  main.py  pyproject.toml
jupyter/: anomaly_detection.ipynb  binance-api.ipynb
src/crypto_bot/: binance_api.py  enums.py  utils.py
src/crypto_bot/kafka_operations/: consumer.py  producer.py
src/crypto_bot/tasks/: __init__.py  binance_api_consumer.py  binance_api_producer.py  celery_config.py
tests/: test_binance_api.py  test_headers.py  test_request_session.py
