[tool.poetry]
name = "crypto-anomaly-detection-bot"
version = "0.1.0"
description = ""
authors = ["Furkan Melih Ercan <furkan.ercan@b2metric.com>"]
readme = "README.md"
packages = [{include = "crypto_anomaly_detection_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
requests = "^2.31.0"
celery = "^5.2.7"
redis = "^4.5.5"
kafka-python = "^2.0.2"
fake-useragent = "^1.1.3"
loguru = "^0.7.0"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
